--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
         <script src="js/vendor/colorbrewer.js"></script>
 
         <script src="js/map.js"></script>
-
+test
     </body>
 </html>
