Fixed åäö in map data

--- a/index.html
+++ b/index.html
@@ -57,19 +57,24 @@
                         loadData(newValue);
                     }
                 </script>
-                
 
+            </div>
+            <div id="menuitem">
+                <form>
+                    <input type="radio" name="displaytype" value="majority" checked> Show majority per municipality<br>
+                    <input type="radio" name="displaytype" value="mix"> Mix party colors together
+                </form>
             </div>
             <div id="menuitem">
                 <input type="checkbox" value="None" id="checkbox1" name="check1" />
                 <label>
-                    Show majority per municipality
+                    Filter by specific party (TODO)
                 </label>
             </div>
             <div id="menuitem">
                 <input type="checkbox" value="None" id="checkbox2" name="check2" />
                 <label>
-                    Filter by age
+                    Find clusters (TODO)
                 </label>
             </div>
             <div id="menuitem">
