Separated loadData from map.js

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <script src="js/vendor/underscore-min.js"></script>
         <script src="js/vendor/colorbrewer.js"></script>
 
+        <script src="js/loadData.js"></script>
         <script src="js/map.js"></script>
         
                 <div id="menu">
@@ -69,6 +70,9 @@
                 <input type="checkbox" value="None" id="checkbox1" name="check1" />
                 <label>
                     Filter by specific party (TODO)
+                    <select>
+                        <option>hej</option>
+                    </select>
                 </label>
             </div>
             <div id="menuitem">
