Added functionality for filtering a party, color intesity depends on the parties influence in the region

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <script src="js/vendor/underscore-min.js"></script>
         <script src="js/vendor/colorbrewer.js"></script>
 
+        <script src="js/main.js"></script>
         <script src="js/loadData.js"></script>
         <script src="js/map.js"></script>
         <script src="js/filterparty.js"></script>
@@ -74,11 +75,8 @@
                 <input type="checkbox" value="None" id="checkbox1" name="check1" onchange="filterByParty(this)"/>
                 <label>
                     Filter by specific party (TODO)
-                    <select>
-                        <option>hej</option>
-                    </select>
                 </label>
-				<select>
+				<select id="dropmenu" disabled="disabled" onchange="changeFilterParty()">
 						<option value="Socialdemokraterna">Socialdemokraterna</option>
 						<option value="Moderaterna">Moderaterna</option>
 						<option value="Vänsterpartiet">Vänsterpartiet</option>
