--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <script src="js/vendor/underscore-min.js"></script>
         <script src="js/vendor/colorbrewer.js"></script>
 
+        <script src="js/main.js"></script>
         <script src="js/loadData.js"></script>
         <script src="js/map.js"></script>
         
