normalized color intensity in filtered view

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div id="menuitem">
                 <input type="checkbox" value="None" id="checkbox1" name="check1" onchange="filterByParty(this)"/>
                 <label>
-                    Filter by specific party (TODO)
+                    Filter by specific party
                 </label>
 				<select id="dropmenu" disabled="disabled" onchange="changeFilterParty()">
 						<option value="Socialdemokraterna">Socialdemokraterna</option>
