changed to swedish

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			
 				<div id="left40">
 					<label>
-						Voting year: <span id="slider-value"></span>
+						Valår: <span id="slider-value"></span>
 					</label>
 				</div>
 				
@@ -53,15 +53,15 @@
 			</div>
 			<div id="menuitem">
 				<form>
-					<input type="radio" name="displaytype" value="majority" checked> Show majority per municipality<br>
-					<input type="radio" name="displaytype" value="mix"> Mix party colors together
+					<input type="radio" name="displaytype" value="majority" checked> Visa majoritet per kommun<br>
+					<input type="radio" name="displaytype" value="mix"> Blanda partifärger tillsammans
 				</form>
 			</div>
 			
 			<div id="menuitem">
 				<input type="checkbox" value="None" id="checkbox1" name="check1" onchange="filterByParty(this)"/>
 				<label>
-					Filter by specific party
+					Filtrera på parti
 				</label>
 				<select id="dropmenu" onchange="changeFilterParty()">
 						<option value="Socialdemokraterna">Socialdemokraterna</option>
@@ -78,14 +78,14 @@
 			<div id="menuitem">
 				<input type="checkbox" value="None" id="checkbox2" name="check2" />
 				<label>
-					Find clusters (TODO)
+					Hitta kluster (TODO)
 				</label>
 			</div>
 			
 			<div id="menuitem">
 				<input type="checkbox" value="None" id="checkbox2" name="check2" />
 				<label>
-					Filter by income
+					Filtrera på inkomst
 				</label>
 			</div>
 		</div>
