--- a/index.html
+++ b/index.html
@@ -36,13 +36,23 @@
         <script src="js/loadData.js"></script>
         <script src="js/map.js"></script>
         <script src="js/filterparty.js"></script>
+        <script src="js/filterRegion.js"></script>
         
 		<div id="menu">
+		
 			<div id="menuitem">
-			
+				<label>
+					<font size="4">
+						Sök kommun
+					</font>
+				</label>
+				<input type="text" onKeyUp="searchUpdate(this.value)">
+			</div>
+		
+			<div id="menuitem">
 				<div id="left40">
 					<label>
-						<font size="6">
+						<font size="4">
 							Valår:
 						</font>
 						<span id="slider-value"></span>
@@ -52,22 +62,12 @@
 				<div id="right60">
 					<input id="voteslider" type="range" min="2002" max="2014" value="2006" step="4" onchange="votingtext(this.value)" />
 				</div>
-
 			</div>
 			
-			<!-- <div id="menuitem">
-				<form>
-					<input type="radio" name="displaytype" value="majority" checked> Visa majoritet per kommun<br>
-					<input type="radio" name="displaytype" value="mix"> Blanda partifärger tillsammans
-				</form>
-			</div> -->
-			
-
-
 			<div id="menuitem">
 				<div>
 					<label>
-						<font size="6">
+						<font size="4">
 							Välj vy:
 						</font>
 					</label>
