--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Sveriges Rikes Valdata</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -111,6 +111,11 @@
 					Filtrera på inkomst
 				</label>
 			</div>
+
+            <div id="details">
+                hej
+            </div>
+
 		</div>
 	
         <script>
