added dynamic updating in the search field, can now filter via clicking regions

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						Sök kommun
 					</font>
 				</label>
-				<input type="text" onKeyUp="searchUpdate(this.value)">
+				<input type="text" onKeyUp="searchUpdate(this.value)" onClick="this.select();">
 			</div>
 		
 			<div id="menuitem">
