--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						Sök kommun
 					</font>
 				</label>
-				<input type="text" onKeyUp="searchUpdate(this.value)" onClick="this.select();">
+				<input id="searchField" type="text" onKeyUp="searchUpdate(this.value)" onClick="this.select();">
 			</div>
 		
 			<div id="menuitem">
@@ -96,20 +96,6 @@
 							<option value="Folkpartiet">Folkpartiet</option>
 						</select>	
 				</div>
-			</div>
-			
-			<div id="menuitem">
-				<input type="checkbox" value="None" id="checkbox2" name="check2" />
-				<label>
-					Hitta kluster (TODO)
-				</label>
-			</div>
-			
-			<div id="menuitem">
-				<input type="checkbox" value="None" id="checkbox2" name="check2" />
-				<label>
-					Filtrera på inkomst
-				</label>
 			</div>
 
             <div id="details">
