--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					</label>
 				
 				<div id="subItem">
-					<input id="voteslider" type="range" min="2002" max="2014" value="2006" step="4" onchange="votingtext(this.value)" />
+					<input id="voteslider" type="range" min="2002" max="2014" value="2014" step="4" onchange="votingtext(this.value)" />
 				</div>
 			</div>
 			
@@ -103,7 +103,7 @@
 			
 			<div id="menuitem">
 			
-				<input type="checkbox" checked="false" id="filterCheckbox" onchange="filterPercentCheckChange(this)"/>
+				<input type="checkbox" id="filterCheckbox" onchange="filterPercentCheckChange(this)"/>
 				<label>
 					<font size="4">
 						Filtrera valsiffror
@@ -111,8 +111,8 @@
 				</label>
 					
 				<div id="subItem">
-					<input id="percentSlider" type="range" min="0" max="100" value="2006" step="1" onchange="filterPercentSliderChange(this)"/>
-					<label> 100% </label>
+					<input id="percentSlider" type="range" min="0" max="100" value="100" step="1" onInput="updatePercentFilterText(this)" onchange="filterPercentSliderChange(this)"/>
+					<label id="filterPercentText"> 100% </label>
 				</div>
 			
 			</div>
