Added content for the detailed box

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <script src="js/filterparty.js"></script>
         <script src="js/filterRegion.js"></script>
         <script src="js/filterPercentage.js"></script>
+        <script src="js/donut.js"></script>
         
 		<div id="menu">
 		
@@ -118,7 +119,10 @@
 			</div>
 
             <div id="details">
-                hej
+                <div id="startup">Select a municipality to show detailed information abut it.</div>
+                <div id="detailsInfo"></div>
+                <div id="detailsDonut"></div>
+                <div id="detailsBelow"></div>
             </div>
 
 		</div>
