Added some bootstrap to the details box, supposedly making it a bit more responsive

--- a/index.html
+++ b/index.html
@@ -117,12 +117,24 @@
 				</div>
 			
 			</div>
-
+<!--
             <div id="details">
                 <div id="startup">Select a municipality to show detailed information abut it.</div>
                 <div id="detailsInfo"></div>
                 <div id="detailsDonut"></div>
                 <div id="detailsBelow"></div>
+            </div>-->
+            <div id="details">
+            	<div id="startup">Select a municipality to show detailed information about it.</div>
+		        <div class="container">
+		        	<div class="row">
+		        		<div class="col-md-6" id="info"></div>
+		        		<div class="col-md-6" id="donut" height="200px"></div>
+		        		<div class="col-md-4" id="pop"></div>
+		        		<div class="col-md-4" id="edu"></div>
+		        		<div class="col-md-4" id="inc"></div>
+		        	</div>
+		        </div>
             </div>
 
 		</div>
