--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<div id="details">
 				
 					<!-- This only shows when no region is selected -->
-					<!-- <div id="startup">Select a municipality to show detailed information about it.</div> -->
+					<div id="startup">Select a municipality to show detailed information about it.</div>
 					
 					<div id="detailTextTitle">
 						<label id="detailsTitle">
